<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/resume"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/companyNameLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/company_name"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Company Name: " />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your Company Name: " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/roleNameLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/role_name"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Role Name: " />

            <TextView
                android:id="@+id/roleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your Role Name: " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/dateFromLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date_from"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Date from: " />

            <TextView
                android:id="@+id/dateFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your starting dt here " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/dateToLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date_to"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Date_to: " />

            <TextView
                android:id="@+id/dateTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your ending dt here " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/responsibilitiesLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/responsibilities"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Responsibilities " />

            <TextView
                android:id="@+id/responsibilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your respons here " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/achievementsLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/achievements"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Achievements: " />

            <TextView
                android:id="@+id/achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                tools:text="Your achievements here " />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>